minor styling changes

--- a/src/components/style/Board.css
+++ b/src/components/style/Board.css
@@ -1,4 +1,6 @@
 .game-board {
-    display: inline-block;
+    display: grid;
     align-items: center;
+    margin: auto;
+    padding-bottom: 60px;
 }
