--- a/src/Game.css
+++ b/src/Game.css
@@ -1,3 +1,23 @@
 .game {
   margin: auto;
 }
+
+header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 5vh;
+  border-bottom: 1px solid #d3d6da;
+}
+
+header .title{
+  font-weight: 600;
+  font-size: 2rem;
+  letter-spacing: 0.2rem;
+  text-transform: uppercase;
+  text-align: center;
+  position: absolute;
+  left: 0;
+  right: 0;
+  pointer-events: none;
+}
