--- a/src/components/style/Tile.css
+++ b/src/components/style/Tile.css
@@ -4,7 +4,7 @@
     height: 50px;
     padding: 5px;
     margin: 2px;
-    border: 2px solid gray;
+    border: 2px solid rgb(189, 189, 189);
     text-align: center;
     font-size: 35px;
     vertical-align: top;
