--- a/src/style/GameKeyboard.css
+++ b/src/style/GameKeyboard.css
@@ -1,6 +1,7 @@
 .game-keyboard {
-    max-width: 500px;
-    margin: auto;
+    width: 100%;
+    margin: 0px;
+    padding: 0px;
 }
 
 /* Theme: wordle-keyboard */
